--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "4.2.1",
-    "@redwoodjs/graphql-server": "4.2.1"
+    "@redwoodjs/auth-clerk-api": "4.2.1",
+    "@redwoodjs/graphql-server": "4.2.1",
+    "openai": "^3.1.0"
   }
 }
