--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,19 @@
     ]
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4",
+    "@redwoodjs/auth-clerk-web": "4.2.1",
     "@redwoodjs/forms": "4.2.1",
     "@redwoodjs/router": "4.2.1",
     "@redwoodjs/web": "4.2.1",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "tailwindcss": "^3.2.7"
   }
 }
