--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@redwoodjs/forms": "4.2.1",
     "@redwoodjs/router": "4.2.1",
     "@redwoodjs/web": "4.2.1",
+    "@tailwindcss/forms": "^0.5.3",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
