--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@redwoodjs/api": "4.2.1",
     "@redwoodjs/auth-clerk-api": "4.2.1",
     "@redwoodjs/graphql-server": "4.2.1",
