--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@redwoodjs/router": "4.2.1",
     "@redwoodjs/web": "4.2.1",
     "@tailwindcss/forms": "^0.5.3",
+    "javascript-time-ago": "^2.5.9",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
