--- a/redwood.toml
+++ b/redwood.toml
@@ -7,7 +7,7 @@
 
 [web]
   host = '0.0.0.0'
-  title = "Dopple"
+  title = "dopple"
   port = 8910
   apiUrl = "/.netlify/functions"
   includeEnvironmentVariables = ["CLERK_PUBLISHABLE_KEY"] # any ENV vars that should be available to the web side, see https://redwoodjs.com/docs/environment-variables#web
