--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@redwoodjs/web": "4.3.1",
     "@tailwindcss/forms": "^0.5.3",
     "clsx": "^1.2.1",
+    "humanize-string": "2.1.0",
     "javascript-time-ago": "^2.5.9",
     "prop-types": "15.8.1",
     "react": "17.0.2",
